--- a/railway-simulation-system/src/Pages/Dashboard/dashboard.css
+++ b/railway-simulation-system/src/Pages/Dashboard/dashboard.css
@@ -56,6 +56,7 @@ a:hover {
 .tab {
     margin-top: 10px;
     margin-bottom: 10px;
+    color:#00e676;
 }
 
 .title {
@@ -80,7 +81,7 @@ a:hover {
     margin-top: 5px;
 }
 
-.name {
+.title {
     font-size: 16px;
     margin-bottom: 3px;
 }
@@ -122,7 +123,7 @@ a:hover {
     overflow: auto;
 }
 
-#title_card #name {
+#title_card #title {
     font-weight: 400;
     margin-top: 20px;
     color:white;
@@ -134,39 +135,24 @@ a:hover {
     font-size: 17px;
 }
 
-#info_card {
+#simulation_card {
     position: relative;
     margin-top: 20px;
 }
 
-#social_card {
+#options_card {
     position: relative;
     margin-top: 20px;
 }
 
-#social_card>.tab>.content {
+#options_card>.tab>.content {
     text-align: center;
     display: flex;
     justify-content: space-around;
+
 }
 
-#fab {
-    position: fixed;
-    width: 55px;
-    height: 55px;
-    line-height: 60px;
-    text-align: center;
-    background-color: var(--accent-color);
-    bottom: 5%;
-    right: 6%;
-    border-radius: 100px;
-    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.4), 0 2px 5px 0 rgba(0, 0, 0, 0.4);
-}
 
-#fab i {
-    color: var(--card-color);
-    font-size: 23px;
-}
 
 @media (max-width: 960px) {
     .card {
@@ -182,7 +168,7 @@ a:hover {
         right: 4%;
     }
 
-    #social_card {
+    #options_card {
         margin-bottom: 20px;
     }
 }
@@ -196,3 +182,8 @@ a:hover {
     text-align: center;
     font-weight: bold;
   }
+
+  .simulation-card{
+    margin-bottom: 20px;
+  }
+
